--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,13 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.js",
+    "**/*.ts",
+    "**/*.tsx",
+    "pages/api/hello.js",
+    "pages/index.jsx",
+    "pages/_app.jsx"
+  ],
   "exclude": ["node_modules"]
 }
